--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
   },
   "homepage": "https://github.com/yeger/blockster#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
+    "del": "^2.2.2",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-beml": "^1.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-group-css-media-queries": "^1.2.0",
+    "gulp-header": "^1.8.8",
+    "gulp-plumber": "^1.1.0",
+    "gulp-prettify": "^0.5.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
     "run-sequence": "^1.2.2"
   }
